# Odyssey

./: .gitignore  Cargo.toml  Cross.toml  README.md  apiHelper.py  build.rs  default.yaml  odyssey.yaml  rust-toolchain.toml
.github/workflows/: build.yml  cleanup.yml  lint.yml  pre-merge-commit.yml  pre-push.yml  release.yml
resources/: default.yaml
resources/scripts/: fbEmulator.py  mockSerial.py
src/: api.rs  api_objects.rs  configuration.rs  display.rs  fbwrapped.rs  filetypes.rs  gcode.rs  lib.rs  main.rs  printer.rs  printfile.rs  serial_handler.rs  settings.rs  shutdown_handler.rs  sl1.rs  wrapped_framebuffer.rs
src/filetypes/: goo.rs  printfile.rs  sl1.rs
test/: fbEmulator.py  mockSerial.py  test.yaml
tests/: hardwareless_mode.rs  no_hardware_mode.rs
tests/common/: mod.rs
tests/resources/: test.yaml
uploads/: .gitignore
uploads/subfolder/: Knob.sl1
