[package]
name = "odyssey"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
#rocket = "0.5.0-rc.2"
config = "0.13.1"
serde = "1.0"
serde_yaml = "0.9"
zip = "0.6.4"
itertools = "0.10.5"
png = "0.17.7"
framebuffer = "0.3.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.26"
async-trait = "0.1.64"
regex = "1"
serialport = { version = "4.2.0", default-features = false }
poem = { version = "1.3.55", features = ["websocket", "multipart"]}
glob = "0.3.1"
log = "0.4.17"
simple_logger = "4.1.0"
