[package]
name = "odyssey"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
cross = "0.2.5"
config = "0.13.4"
serde = "1.0"
serde_yaml = "0.9"
zip = "1.1.1"
itertools = "0.12.1"
png = "0.17.7"
framebuffer = "0.3.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"
tokio-serial = "5.4.4"
futures = "0.3.26"
async-trait = "0.1.64"
regex = "1"
serialport = { version = "4.2.0", default-features = false }
poem = { version = "3.0.0", features = ["websocket", "multipart"]}
poem-openapi = { version = "5.0.0", features = ["swagger-ui"] }
glob = "0.3.1"
log = "0.4.17"
simple_logger = "4.1.0"

[dev-dependencies]
tempfile = "3.13.0"
nix = { version = "0.29.0", features = ['fs'] }
